Tue Jan 12 19:08:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
        * TAO_IDL/be_include/be_visitor_ami_pre_proc.h:
          No seperate method needed for creating the exceptionholder

Tue Jan 12 14:12:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
          Commented out some code not needed for ami4ccm, but needed for
          ami

Tue Jan 12 08:34:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
        * TAO_IDL/be_include/be_visitor_ami4ccm_pre_proc.h:
          Extended AMI4CCM code generation

Fri Jan  8 11:42:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/ast/ast_interface.cpp:
          layout change

        * TAO_IDL/be/be_global.cpp:
          CCM_AMI::ReplyHandler is a local interface

        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
        * TAO_IDL/be_include/be_visitor_ami4ccm_pre_proc.h:
          Enable most code in this file in order to implement this ami4ccm
          implied node generation

        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
          Don't crash when create_inheritance_list returns 0, but log an error

Fri Jan  8 11:18:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be_include/be_global.h:
          Added CCM_AMI::ReplyHandler base interface

Fri Jan  8 10:56:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be_include/be_global.h:
          Added members for CCM_AMI module and its ExceptionHolder

Fri Jan  8 10:12:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_uses.cpp:
        * TAO_IDL/be_include/be_uses.h:
          Added original_uses member

        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
          Prevent recursion using the new original_uses member
